force-app/main/default/objects/cgcloud__KPI_Definition__c/cgcloud__KPI_Definition__c.object-meta.xml
<CustomObject>
    <description>Contains the description for a single measure. The fields of the table can be derived from the current KPI_Set JSON.</description>
    <label>KPI Definition</label>
    <nameField>
        <label>KPI Definition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KPI Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>