force-app/main/default/objects/cgcloud__KPI_Definition__c/fields/cgcloud__Aggregation_Merge_Rule__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Aggregation_Merge_Rule__c</fullName>
    <description>Determines how the subperiods are merged into full weeks/months.</description>
    <label>Merge Rule</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>avg</fullName>
            </value>
            <value>
                <fullName>sum</fullName>
                <default>true</default>
                <label>sum</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>