force-app/main/default/objects/cgcloud__KPI_Definition__c/fields/cgcloud__Aggregation_Rule__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Aggregation_Rule__c</fullName>
    <description>Defines how the data in lower level nodes are aggregated to higher levels.</description>
    <label>Aggregation Rule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>cgcloud__Aggregation_Rule</valueSetName>
    </valueSet>
</CustomField>