force-app/main/default/objects/cgcloud__KPI_Definition__c/fields/cgcloud__Aggregation_Time_Rule__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Aggregation_Time_Rule__c</fullName>
    <label>Aggregation Time Rule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>aggregate</fullName>
            </value>
            <value>
                <fullName>formula</fullName>
            </value>
            <value>
                <fullName>read</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>