force-app/main/default/objects/cgcloud__KPI_Definition__c/fields/cgcloud__BoM_Scope__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__BoM_Scope__c</fullName>
    <description>Defines the levels for which the calculation engine determines values.</description>
    <label>BOM Scope</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Header</fullName>
            </value>
            <value>
                <fullName>Component</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>