force-app/main/default/objects/cgcloud__KPI_Definition__c/fields/cgcloud__Comment__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Comment__c</fullName>
    <description>Holds extra information about the KPI Definition</description>
    <label>Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>