force-app/main/default/objects/cgcloud__KPI_Definition__c/fields/cgcloud__Compound_Main__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Compound_Main__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compound Main</label>
    <type>Checkbox</type>
</CustomField>