force-app/main/default/objects/cgcloud__KPI_Definition__c/fields/cgcloud__Data_Source_Aggregation_Mode__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Data_Source_Aggregation_Mode__c</fullName>
    <label>Aggregation Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>standard</fullName>
                <default>true</default>
                <label>standard</label>
            </value>
            <value>
                <fullName>custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>