force-app/main/default/objects/cgcloud__KPI_Definition__c/fields/cgcloud__Data_Source_BoM_Component_Source_Level__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Data_Source_BoM_Component_Source_Level__c</fullName>
    <description>Defines from which level the values are determined.</description>
    <inlineHelpText>Defines from which level the values are determined</inlineHelpText>
    <label>BOM Component Source Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Component</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>