force-app/main/default/objects/cgcloud__KPI_Definition__c/fields/cgcloud__Data_Source_Condition_Search_Group__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Data_Source_Condition_Search_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the condition search group.</description>
    <inlineHelpText>Defines the condition search group.</inlineHelpText>
    <label>Condition Search Group</label>
    <referenceTo>cgcloud__Condition_Search_Group__c</referenceTo>
    <relationshipLabel>KPI Definitions</relationshipLabel>
    <relationshipName>KPI_Definitions</relationshipName>
    <type>Lookup</type>
</CustomField>