force-app/main/default/objects/cgcloud__KPI_Definition__c/fields/cgcloud__Data_Source_Condition_Search_Group_Code__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Data_Source_Condition_Search_Group_Code__c</fullName>
    <description>Stores the group code of the condition search group.</description>
    <formula>cgcloud__Data_Source_Condition_Search_Group__r.cgcloud__Group_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Defines the condition search group code</inlineHelpText>
    <label>Condition Search Group Code</label>
    <type>Text</type>
</CustomField>