force-app/main/default/objects/cgcloud__KPI_Definition__c/fields/cgcloud__Data_Source_Consider_Product_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Data_Source_Consider_Product_Hierarchy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicating whether the product hierarchy is considered for the condition search.</description>
    <inlineHelpText>Defines if the product hierarchy must be considered for the condition search</inlineHelpText>
    <label>Consider Product Hierarchy</label>
    <type>Checkbox</type>
</CustomField>