force-app/main/default/objects/cgcloud__KPI_Definition__c/fields/cgcloud__Data_Source_Enable_OoT_Aggregation__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Data_Source_Enable_OoT_Aggregation__c</fullName>
    <description>When reading Volume Values from PromotionTactic Integration tables, enables the aggregation of data outside of timeframe scope for the first and last periods.</description>
    <inlineHelpText>When reading Volume Values from PromotionTactic Integration tables, enables the aggregation of data outside of timeframe scope for the first and last periods.</inlineHelpText>
    <label>Enable Out of Timeframe Aggregation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>no</fullName>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>