force-app/main/default/objects/cgcloud__KPI_Definition__c/fields/cgcloud__Data_Source_Load_For_Sub_Accounts__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Data_Source_Load_For_Sub_Accounts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines if the loaded data is anchored to the planning account or to a list of accounts (Sub accounts). Applicable only for &apos;Read&apos; type.</description>
    <inlineHelpText>Defines if the data is loaded from sub accounts.</inlineHelpText>
    <label>Consider Sub Accounts</label>
    <type>Checkbox</type>
</CustomField>