force-app/main/default/objects/cgcloud__KPI_Definition__c/fields/cgcloud__Data_Source_Measure_Code__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Data_Source_Measure_Code__c</fullName>
    <description>Unique code for a measure type</description>
    <label>Read Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>