force-app/main/default/objects/cgcloud__KPI_Definition__c/fields/cgcloud__Data_Source_Monthly_Table_Name__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Data_Source_Monthly_Table_Name__c</fullName>
    <description>Name of the source table for Monthly data to be read.</description>
    <inlineHelpText>Defines the source table for Monthly data to be read</inlineHelpText>
    <label>Monthly Table Name</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>cgcloud__Data_Source_Table_Name__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>accountmeasure</fullName>
            </value>
            <value>
                <fullName>accountproductmeasure</fullName>
            </value>
            <value>
                <fullName>dailymeasureint</fullName>
            </value>
            <value>
                <fullName>dailymeasurereal</fullName>
            </value>
            <value>
                <fullName>monthlypromotionmeasureresult</fullName>
            </value>
            <value>
                <fullName>monthlyaccountmeasureresult</fullName>
            </value>
            <value>
                <fullName>productmeasure</fullName>
            </value>
            <value>
                <fullName>promotiontacticdailymeasurereal</fullName>
            </value>
            <value>
                <fullName>monthlypaymenttacticmeasureresult</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>