force-app/main/default/objects/cgcloud__KPI_Definition__c/fields/cgcloud__Data_Source_Table_Name__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Data_Source_Table_Name__c</fullName>
    <description>Name of the source table from which the measure data is drawn.</description>
    <inlineHelpText>Defines the source data table from which the measure data is drawn</inlineHelpText>
    <label>Table Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>accountmeasure</fullName>
            </value>
            <value>
                <fullName>accountproductmeasure</fullName>
            </value>
            <value>
                <fullName>dailymeasureint</fullName>
            </value>
            <value>
                <fullName>dailymeasurereal</fullName>
            </value>
            <value>
                <fullName>productmeasure</fullName>
            </value>
            <value>
                <fullName>promotiontacticdailymeasurereal</fullName>
            </value>
            <value>
                <fullName>promotiontacticweeklymeasurereal</fullName>
            </value>
            <value>
                <fullName>weeklyaccountmeasureresult</fullName>
            </value>
            <value>
                <fullName>weeklymeasureint</fullName>
            </value>
            <value>
                <fullName>weeklymeasurereal</fullName>
            </value>
            <value>
                <fullName>weeklypaymenttacticmeasureresult</fullName>
            </value>
            <value>
                <fullName>weeklypromotionmeasureresult</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>