force-app/main/default/objects/cgcloud__KPI_Definition__c/fields/cgcloud__Data_Source_Week_Offset__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Data_Source_Week_Offset__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Data is fetched from the database for the timeframe that lies this number of weeks before the promotion. Only supported for volume data</description>
    <label>Week Offset</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>