force-app/main/default/objects/cgcloud__KPI_Definition__c/fields/cgcloud__Data_Source_Year_Offset__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Data_Source_Year_Offset__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of years to go back in time. The data is fetched from the database for the timeframe that lies this number of years which can be 1 or 2 years before the promotion.
      Applicable only for &apos;Read&apos; type.
      It cannot be used in combination with week offset for one KPI at the same time.</description>
    <label>Year Offset</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>