force-app/main/default/objects/cgcloud__KPI_Definition__c/fields/cgcloud__Display_Enabled__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Display_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>