force-app/main/default/objects/cgcloud__KPI_Definition__c/fields/cgcloud__Display_Round__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Display_Round__c</fullName>
    <defaultValue>2</defaultValue>
    <description>UI Rounding determines the number of decimal places to be displayed in the cell.</description>
    <inlineHelpText>UI Rounding determines the number of decimal places to be displayed in the cell.</inlineHelpText>
    <label>UI Rounding</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>