force-app/main/default/objects/cgcloud__KPI_Definition__c/fields/cgcloud__Distribution_Acc_Hierarchy_Dist_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Distribution_Acc_Hierarchy_Dist_Type__c</fullName>
    <description>Distribution mechanism used to distribute values along the account hierarchy</description>
    <label>Distribution Type (Customer Hierarchy)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>metric</fullName>
            </value>
            <value>
                <fullName>equal</fullName>
            </value>
            <value>
                <fullName>copy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>