force-app/main/default/objects/cgcloud__KPI_Definition__c/fields/cgcloud__Distribution_Acc_Hierarchy_Metric_Code__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Distribution_Acc_Hierarchy_Metric_Code__c</fullName>
    <description>The measure code defines the code that is used for distribution of values down the account hierarchy.
Applicable only for &apos;Editable&apos; record type.</description>
    <label>Distribution Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>