force-app/main/default/objects/cgcloud__KPI_Definition__c/fields/cgcloud__Distribution_Order__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Distribution_Order__c</fullName>
    <label>Distribution Order</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TimeThenPlan</fullName>
            </value>
            <value>
                <fullName>PlanThenTime</fullName>
                <default>true</default>
                <label>PlanThenTime</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>