force-app/main/default/objects/cgcloud__KPI_Definition__c/fields/cgcloud__Distribution_Plan_Hierarchy_Dist_Metric__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Distribution_Plan_Hierarchy_Dist_Metric__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distribution (Planning Hierarchy)</label>
    <referenceTo>cgcloud__KPI_Definition__c</referenceTo>
    <relationshipLabel>KPI Definitions (Distribution (Plan Hierarchy))</relationshipLabel>
    <relationshipName>KPI_Definitions_Plan_Hierarchy</relationshipName>
    <type>Lookup</type>
</CustomField>