force-app/main/default/objects/cgcloud__KPI_Definition__c/fields/cgcloud__Distribution_Time_Hierarchy_Dist_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Distribution_Time_Hierarchy_Dist_Type__c</fullName>
    <label>Distribution Type (Time Hierarchy)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>metric</fullName>
                <default>true</default>
                <label>metric</label>
            </value>
            <value>
                <fullName>equal</fullName>
            </value>
            <value>
                <fullName>proportional</fullName>
            </value>
            <value>
                <fullName>copy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>