force-app/main/default/objects/cgcloud__KPI_Definition__c/fields/cgcloud__Editable_Edit_Mode__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Editable_Edit_Mode__c</fullName>
    <label>Edit Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>none</fullName>
            </value>
            <value>
                <fullName>week</fullName>
                <default>true</default>
                <label>week</label>
            </value>
            <value>
                <fullName>total</fullName>
            </value>
            <value>
                <fullName>all</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>