force-app/main/default/objects/cgcloud__KPI_Definition__c/fields/cgcloud__Editable_Enable_Past_Weeks__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Editable_Enable_Past_Weeks__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable Past Weeks</label>
    <type>Checkbox</type>
</CustomField>