force-app/main/default/objects/cgcloud__KPI_Definition__c/fields/cgcloud__Editable_Fixed_Totals__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Editable_Fixed_Totals__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is field is for lump sum. Enabling this means that when a user introduces a total, the totals will not change even if other things change (kpi, products, etc.)</description>
    <label>Fixed Totals</label>
    <type>Checkbox</type>
</CustomField>