force-app/main/default/objects/cgcloud__KPI_Definition__c/fields/cgcloud__Editable_Measure_Code__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Editable_Measure_Code__c</fullName>
    <label>Editable Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>