force-app/main/default/objects/cgcloud__KPI_Definition__c/fields/cgcloud__Formula__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Formula__c</fullName>
    <label>Formula</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>