force-app/main/default/objects/cgcloud__KPI_Definition__c/fields/cgcloud__Has_Component_BoM_Scope__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Has_Component_BoM_Scope__c</fullName>
    <formula>INCLUDES(cgcloud__BoM_Scope__c, &quot;Component&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Component BoM Scope</label>
    <type>Checkbox</type>
</CustomField>