force-app/main/default/objects/cgcloud__KPI_Definition__c/fields/cgcloud__Is_Storage_Level_Bom_Component__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Is_Storage_Level_Bom_Component__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag that indicates if KPI Definition Storage Levels is BOM Component.</description>
    <label>Is Storage Level Bom Component</label>
    <type>Checkbox</type>
</CustomField>