force-app/main/default/objects/cgcloud__KPI_Definition__c/fields/cgcloud__Parent__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>cgcloud__KPI_Definition__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>compound</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cgcloud__KPI_Definition__c</referenceTo>
    <relationshipLabel>KPI Definitions (Parent)</relationshipLabel>
    <relationshipName>KPI_Definitions_Parent</relationshipName>
    <type>Lookup</type>
</CustomField>