force-app/main/default/objects/cgcloud__KPI_Definition__c/fields/cgcloud__Reporting_Relevant__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Reporting_Relevant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reporting Relevant</label>
    <type>Checkbox</type>
</CustomField>