force-app/main/default/objects/cgcloud__KPI_Definition__c/fields/cgcloud__Reporting_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Reporting_Type__c</fullName>
    <label>Reporting Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>read</fullName>
                <default>true</default>
                <label>read</label>
            </value>
            <value>
                <fullName>calculated</fullName>
            </value>
            <value>
                <fullName>external</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>