force-app/main/default/objects/cgcloud__KPI_Definition__c/fields/cgcloud__Rounding_Order__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Rounding_Order__c</fullName>
    <description>Period Then Sub Periods method rounds period values first, and then rounds the buckets ensuring their merged value matches the period value.
Sub Periods Then Period rounds subperiods first and then merge them into periods.</description>
    <inlineHelpText>Period Then Sub Periods method rounds period values first, and then rounds the buckets ensuring their merged value matches the period value.
Sub Periods Then Period rounds subperiods first and then merges them into periods.</inlineHelpText>
    <label>Rounding Order</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>default</fullName>
            </value>
            <value>
                <fullName>periodfirst</fullName>
            </value>
            <value>
                <fullName>subperiodfirst</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>