force-app/main/default/objects/cgcloud__KPI_Definition__c/fields/cgcloud__Rounding_Precision__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Rounding_Precision__c</fullName>
    <label>Rounding Precision</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>