force-app/main/default/objects/cgcloud__KPI_Definition__c/fields/cgcloud__Rounding_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Rounding_Type__c</fullName>
    <description>Rounding With Carry Over is a special configuration that uses a carryover from one cell to the next to ensure that aggregations and totals match with the rounded number. Rounding Enabled performs a simple rounding to the nearest number.</description>
    <inlineHelpText>Rounding With Carry Over is a special configuration that uses a carryover from one cell to the next to ensure that aggregations and totals match with the rounded number. Rounding Enabled performs a simple rounding to the nearest number.</inlineHelpText>
    <label>Rounding Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>nocarryover</fullName>
            </value>
            <value>
                <fullName>withcarryover</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>