force-app/main/default/objects/cgcloud__KPI_Definition__c/fields/cgcloud__Scope__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Scope__c</fullName>
    <description>Defines the object scope of the KPI. The KPI can be added to the relevant KPI Set based on the defined scope.</description>
    <label>Object Scope</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>promotion</fullName>
            </value>
            <value>
                <fullName>promotiontactic</fullName>
            </value>
            <value>
                <fullName>paymenttactic</fullName>
            </value>
            <value>
                <fullName>fund</fullName>
            </value>
            <value>
                <fullName>account</fullName>
                <default>true</default>
                <label>account</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>