force-app/main/default/objects/cgcloud__KPI_Definition__c/fields/cgcloud__Storage_Options_Measure_Code__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Storage_Options_Measure_Code__c</fullName>
    <label>Writeback Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>