force-app/main/default/objects/cgcloud__KPI_Definition__c/fields/cgcloud__Storage_Options_Storage_Levels__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Storage_Options_Storage_Levels__c</fullName>
    <description>Product</description>
    <label>Storage Levels</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>cgcloud__Scope__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Category</fullName>
            </value>
            <value>
                <fullName>SubCategory</fullName>
            </value>
            <value>
                <fullName>Brand</fullName>
            </value>
            <value>
                <fullName>Flavor</fullName>
            </value>
            <value>
                <fullName>Package</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
                <default>true</default>
                <label>Product</label>
            </value>
            <value>
                <fullName>Tactic</fullName>
            </value>
            <value>
                <fullName>measures</fullName>
            </value>
            <value>
                <fullName>BomComponent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>