force-app/main/default/objects/cgcloud__KPI_Definition__c/fields/cgcloud__Storage_Options_Subperiod__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Storage_Options_Subperiod__c</fullName>
    <description>If active, writeback has to generate daily accurate values for the subperiods that belong to different months.</description>
    <label>Subperiod</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>weeksplits</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>