force-app/main/default/objects/cgcloud__KPI_Definition__c/fields/cgcloud__Storage_Options_Writeback__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Storage_Options_Writeback__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Writeback</label>
    <type>Checkbox</type>
</CustomField>