force-app/main/default/objects/cgcloud__KPI_Definition__c/fields/cgcloud__Time_Granularity__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Time_Granularity__c</fullName>
    <description>If granularity is &apos;Subperiod&apos;, the formula will be applied at subperiod level and merged using merge rule. In &apos;Period&apos; granularity, the formula will be applied over already merged values.</description>
    <inlineHelpText>If granularity is Subperiod, the formula will be applied at subperiod level and merged using merge rule. In Period granularity, the formula will be applied over already merged values.</inlineHelpText>
    <label>Time Granularity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>subperiod</fullName>
                <default>true</default>
                <label>subperiod</label>
            </value>
            <value>
                <fullName>period</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>