force-app/main/default/objects/cgcloud__KPI_Definition__c/fields/cgcloud__Time_Scope__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Time_Scope__c</fullName>
    <description>Consideration of time ranges within calculation.</description>
    <label>Time Scope</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>cgcloud__Scope__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>complete</fullName>
                <default>true</default>
                <label>complete</label>
            </value>
            <value>
                <fullName>shipment</fullName>
            </value>
            <value>
                <fullName>placement</fullName>
            </value>
            <value>
                <fullName>order</fullName>
            </value>
            <value>
                <fullName>custom1</fullName>
            </value>
            <value>
                <fullName>custom2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>